# dotbot-neverland

./: .gitignore  README.md  pyproject.toml
docs/: README.md  bypass_dns_poisoning.md
src/dotbot_neverland/: __init__.py  bot.py  parsing.py
src/dotbot_neverland/models/: __init__.py  _base.py  _filter_attrs.py  events.py  raw.py  users.py
src/dotbot_neverland/utils/: aliases.py  custom_id.py  parcing_utils.py  validators.py
test/: async_handler.py  dpg.py  hello.py  ignore_self.py  minimal.py  update_message.py  users.py  warning.py
test/profiling/: profiling.py
