[project]
name = "dotbot-neverland"
version = "0.1.0"
description = "Add your description here"
authors = [
    { name = "xjzh123", email = "37945610+xjzh123@users.noreply.github.com" }
]
dependencies = [
    "websockets>=12.0",
    "attrs>=23.2.0",
]
readme = "README.md"
requires-python = ">= 3.8"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.rye]
managed = true
dev-dependencies = []

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.wheel]
packages = ["src/dotbot_neverland"]
