[project]
name = "dotbot-neverland"
version = "0.1.3"
description = "Add your description here"
authors = [
    { name = "xjzh123", email = "37945610+xjzh123@users.noreply.github.com" }
]
dependencies = [
    "websockets>=12.0",
    "attrs>=23.2.0",
]
readme = "README.md"
requires-python = ">= 3.12"

[project.urls]
Homepage = "https://github.com/xjzh123/dotbot-neverland"
Documentation = "https://github.com/xjzh123/dotbot-neverland/tree/master/docs"
Repository = "https://github.com/xjzh123/dotbot-neverland.git"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.rye]
managed = true
dev-dependencies = [
    "winloop>=0.1.6",
]

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.wheel]
packages = ["src/dotbot_neverland"]

[tool.ruff.lint]
ignore = ["F401", "F403", "F405"]
